==Pay per View==

1.4.7 - 2018-07-16 - Umesh Kumar

* Fixed: Extended Cookie validity time not considered while showing hidden content

1.4.6 - 2017-08-30 - Umesh Kumar

* Fixed:
    Facebook Login not working
    Paypal Payment not working

1.4.5 - 2017-08-02 - Umesh Kumar
----------------------------------------------------------------------

- Fixed: WordPress 4.8 compatibility

1.4.4 - 2015-06-15 - Umesh Kumar
----------------------------------------------------------------------
- Fixed: Facebook login issue

1.4.3 - 2015-06-15 - Umesh Kumar
----------------------------------------------------------------------
- Fixed: Facebook login

1.4.2 - 2015-06-15 - Umesh Kumar
----------------------------------------------------------------------

- New:     Integrated PDT (Payment Data Transfer) which allows instant payment notification for periodic pass
- Fixed:   Show social login, only if API settings are available
- Fixed:   User Profile : Expire field not working
- Updated: Google OAuth integrated
- Updated: Social Login - Enable selected login out of Facebook, Twitter, Google

V1.4.1.9:
- Add day, month, year choices to Daily Pass. Changed name to Period Pass
- Add day, month, year choices to Subscriptions.

V1.4.1.8:
- Record user id if logged in for one time payments.
- Added new WPMUDEV dashboard.

V1.4.1.7:
- Added Registration link for Wordpress login
- Fixed problems with Twitter API 1.1 changes.
- New version of twitteroauth library

V1.4.1.6:
- For subscriptions the Wordpress login is always enabled now even if API is unchecked.


V1.4.1.5:
- Damaged zip in 1.4.1.4

V1.4.1.4:
- Redirect for protected area was going to the page id instead of the permalink.

V1.4.1.3:
- Fixed confirm button double press problem. Missing exit on wp_redirect.

V1.4.1.2:
- Added proper escaping to SQL
- Broke out ChangeLog.txt
- Standardized language file

V1.4.1.1:
- Transaction date fixed
- Long post titles are not creating 10001 PayPal error now

V1.4.1: